--- a/Flask_web/templates/base.html
+++ b/Flask_web/templates/base.html
@@ -126,7 +126,7 @@
                             <li class="nav-item"><a class="nav-link" href="\management">Management</a></li>
                             <li class="nav-item dropdown"><a class="nav-link" href="\schedule" >Schedule</a></li>
                             <li class="nav-item"><a class="nav-link" href="\streaming">Video</a></li>
-                            <li class="nav-item"><a class="nav-link" href="\training">Training(尚未完成)</a>
+                            <li class="nav-item"><a class="nav-link" href="\training">Training(製作中)</a>
                             </li>
                         </ul>
                     </div>
