--- a/Flask_web/templates/management.html
+++ b/Flask_web/templates/management.html
@@ -19,15 +19,6 @@
     img{
         max-width: 100%;
     }
-    /*    ______________ 按鈕設定 ______________   */
-    .btn{
-        background-color: #b1d3f5;
-        color: rgb(116 109 109);
-        font-size: 20px;
-        margin-top: -3px;
-        text-align: right;
-    }
-
     /*    ______________ 大看板上的選單 ______________   */
     nav img{
         width: 200px;
@@ -64,8 +55,16 @@
 
 {% block intro %}       
 <section id="intro">
-    <div class="jumbotron" >   
-        <table id="table"  class="table table-dark" data-url="static/camera_info.json" data-height="299">
+    <div class="jumbotron" >
+        <div class="row">
+            <h4> 選擇Fence or Group or Alias 分類表格 : 　 </h4>
+            <select id="sort_option" class="form-select form-select-lg mb-2" aria-label=".form-select-sm example" onchange="sort_tr()">
+            <!-- <option value="None" selected>以Fence、Group、Alias分類 (尚未完成)</option> -->
+            <option class="choose_option" value="Fence">Fence</option>
+            <option class="choose_option" value="Group">Group</option>
+            </select>
+        </div>   
+        <table id="manegement_table"  class="table table-dark" data-url="static/camera_info.json" data-height="299">
             <thead>
               <tr>
                 <th scope="col" data-field="fence">Fence</th>
@@ -79,8 +78,8 @@
             <tbody >
                 {% for item in items %}
                     {% for key in item.fence.keys() %}
-                <tr>
-                    <td id="{{item.alias}} {{key}}_Name" style="font-size:20px">{{item.alias}}  ( {{key}} )</td>
+                <tr class="info">
+                    <td class="fence" id="{{item.alias}} {{key}}_Name" style="font-size:20px">{{item.alias}}  ({{key}})</td>
                     <td class="group" id="{{item.alias}} {{key}}_Group" style="font-size:20px">{{item.fence[key].Group}}  </td>
                     <td id="{{item.alias}} {{key}}_Alarm_Level" style="font-size:20px">{{item.fence[key].Alarm_Level}}  </td>
                     <td id="{{item.alias}} {{key}}_Note" style="font-size:20px">{{item.fence[key].Note}}  </td>
@@ -96,6 +95,104 @@
         </table> 
     </div>
 </section>
+
+
+<!-- __________________________________________ 編輯資訊 __________________________________________   -->
+<div class="modal fade" id="Edit_Modal" tabindex="-1" role="dialog" aria-labelledby="Edit_Modal" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="Edit_Modal_title">Edit : </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                <div class="form-group mb-2">
+                    <label for="recipient-name" class="col-4 col-form-label">Group :</label>
+                    <select id="select-group" class="col-5 col-form-control" >
+                    </select>
+                    <button type="button" id="Add_Group_Btn"class="btn btn-outline-success btn-sm" data-target="#Add_Group_Modal" data-toggle="modal"  data-dismiss="modal">Add Group</button>
+                </div>
+                
+                <div class="form-group mb-2">
+                    <label for="message-text" class="col-4 col-form-label">Sensitivity :</label>
+                    <input class="col-5 col-form-control" id="message-text-Sensitivity" type="number" placeholder="only 0.1 ~ 1" step="0.1" min="0.1" max="1"></input>
+                </div>
+                <div class="form-group mb-2">
+                    <label for="message-text" class="col-4 col-form-label">Place :</label>
+                    <input class="col-5 col-form-control" id="message-text-Place"></input>
+                </div>
+                <div class="form-group mb-2">
+                    <label for="message-text" class="col-4 col-form-label">Notes :</label>
+                    <input class="col-5 col-form-control" id="message-text-Notes"></input>
+                </div>
+                <div class="form-group mb-2">
+                    <label for="message-text" class="col-4 col-form-label">Alarm message :</label>
+                    <input class="col-5 col-form-control" id="message-text-Alarm-message"></input>
+                </div>
+                <div class="form-group mb-2">
+                    <label for="recipient-name" class="col-4 col-form-label-Alarm-level">Alarm level :</label>
+                    <select id="select-Alarm_Level" class="col-5 col-form-control" >
+                        <option selected>General </option>
+                        <option >           High </option>
+                    </select>
+                </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="close" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" id="confirm" class="btn btn-primary" onclick="edit_confirm()" data-dismiss="modal" aria-label="Close">Confirm</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Add Group Modal -->
+<div class="modal fade" id="Add_Group_Modal" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalToggleLabel">Add Group</h5>
+          <button type="button" class="close" data-dismiss="modal" data-target="#exampleModal" data-toggle="modal">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+        <div class="modal-body">
+            <div class="form-group mb-2">
+                <label for="message-text" class="col-3 col-form-label">Group :</label>
+                <input class="col-5 col-form-control" id="GroupName" required></input>
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button  class="btn btn-primary" id="SaveName" value="SAVE" data-target="#Edit_Modal" data-toggle="modal" data-dismiss="modal">Save</button>
+        </div>
+      </div>
+    </div>
+</div>
+
+
+<!-- Del fence Modal -->
+<div class="modal fade" id="Del_fence_Modal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="Del_fence_Modal">Delete </h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </div>
+            <div class="modal-body">
+            <p id="text" style="font-size: 20px;"> </p>
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close" onclick="del_confirm()">Yes</button>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 
@@ -114,45 +211,148 @@
             document.getElementById(FormName).submit()
         });
 
-
         $("button#SaveName").click(function (){
             var GroupName = $('input#GroupName').val();
             var selection   = document.getElementById('select-group')
             check(selection, GroupName)      
         });
 
-
         $("button#Add_Group_Btn").click(function (){
             var title = document.getElementById('exampleModal')
         });
     });
 
+    function sort_tr(test){
+        var choose_option = document.getElementById('sort_option').value    // select 選項值
+        
+
+
+
+        
+        if(choose_option == "Fence"){           // Fence 選項
+            var all_tr = document.getElementsByClassName('info')                // tbody 全部的 <tr>
+            // 前置作業
+            // 拿到 全部排序的group 加入到 array_sort_group 的Array
+            var array_fence = []
+            for (i=0; i<all_tr.length; i++ ){
+                var tr_fence = all_tr[i].getElementsByClassName("fence")[0].innerText.split("(")[1].split(")")
+                array_fence.push(tr_fence[0])
+            }
+
+
+            // 得到一個沒有重複並且排序過的 fence key
+            var set_sort_fence = new Set(array_fence.sort())
+            var array =[]
+
+            // 利用 sort 完的 array 排序新的 tr
+            for(let key of set_sort_fence) {
+                for(var j = 0; j < all_tr.length; j++){
+                    var fence = all_tr[j].getElementsByTagName('td')[0].innerText.split("(")[1].split(")")[0]
+
+                    if  ( key == fence){
+                        array.push(all_tr[j].innerHTML)
+                    }             
+                }
+            }
+            TR_insert(array)    // 插入新的<tr>、刪除舊的<tr>
+        }
+
+        else if (choose_option == "Group"){     // Group 選項
+        var all_tr = document.getElementsByClassName('info')                // tbody 全部的 <tr>
+        // 前置作業
+        // 拿到 全部排序的group 加入到 array_sort_group 的Array
+        var array_group = []
+        for (i=0; i<all_tr.length; i++ ){
+            var tr_group = all_tr[i].getElementsByClassName("group")[0].innerText
+            array_group.push(tr_group)
+        }
+
+        // 得到一個沒有重複並且排序過的 group key
+        var set_sort_group = new Set(array_group.sort())
+        var array =[]
+
+        // 利用 sort 完的 array 排序新的 tr
+        for(let key of set_sort_group) {
+            for(var j = 0; j < all_tr.length; j++){
+                var group = all_tr[j].getElementsByTagName('td')[1].innerText
+                if  ( key == group){
+                    array.push(all_tr[j].innerHTML)
+                }             
+            }
+        }
+
+        TR_insert(array)    // 插入新的<tr>、刪除舊的<tr>
+        }
+    }
+    // === 排序功能 ===
+    // 新增新的 <tr> 至 table
+    function TR_insert(array) { 
+        var tableRef = document.getElementById('manegement_table').getElementsByTagName('tbody')[0];
+        var rows = tableRef.rows.length 
+
+        TR_delete()
+     
+        for(j = 0; j < rows; j++) {
+            var newRow = tableRef.insertRow(j);
+            newRow.innerHTML = array[j]
+        }
+        $('tbody tr').attr("class","info")  // 將新的tr給 class="info" 的設定，否則會BUG
+    }
+    // 刪除舊的 <tr> 
+    function TR_delete(){
+        var tbody = document.getElementsByClassName('info')
+        var length = tbody.length
+
+        for(j = 0; j < length; j++) {
+            tbody[0].remove();  //通過行索引刪除行
+        }    
+	}
+    // === 排序功能 ===
+
+
+
+
+    // === Edit 功能===
     // 確認 Group 不重複function
     function check(selection, Name){
 
         var group = document.getElementsByClassName('group')
         
         for (i=0; i<group.length; i++ ){
-            console.log('i = ' + i)  
+
             if (group_set.has(group[i].innerText)){}
-            else{         
+            else{
                 group_set.add(group[i].innerText)
-                $("select#select-group").append(" <option >"+ group[i].innerText + "</option>"); 
+                $("select#select-group").append("<option id='"+group[i].innerText+"' class='group_option'>"+ group[i].innerText + "</option>"); 
             }
         }
-
         if (group_set.has(Name)){}
         else{
             group_set.add(Name)
             $("select#select-group").append(" <option >"+ Name + "</option>"); 
         }
+
+        // 點擊編輯時，該Group的選項被選為selected
+        var group_option = document.getElementsByClassName('group_option')
+        var selected_option = document.getElementById(String(Name))
+        for (i=0; i<group_option.length; i++ ){
+
+            if (Name == group_option[i].innerText){
+                console.log("ok")
+                $("option#"+String(Name)).prop('selected', true);
+            }         
+        }
+        console.log(selected_option)  
+
     }
     //  編輯資訊欄 得到 Fence Name並寫入 modal title
     function edit_Modal(fencename) {
+
+
         var Modal = document.getElementById('Edit_Modal_title')
         Modal.innerText = "Edit : " + fencename.id
         $('#Edit_Modal').modal() 
-        console.log(fencename.id)
+
         var Name        = document.getElementById(fencename.id+'_Name')
         var Group       = document.getElementById(fencename.id+'_Group')
         var Sensitivity = document.getElementById(fencename.id+'_Sensitivity')
@@ -165,6 +365,9 @@
         $('input#message-text-Place').attr("value",fencename.id.split(' ')[1])
         $('input#message-text-Sensitivity').attr("value",Sensitivity.innerText)
         $('input#message-text-Notes').attr("value",Note.innerText)
+
+        $('option:selected').removeAttr("selected")
+
     }
     function del_Modal(fencename) {
         var text = document.getElementById('text')
@@ -207,7 +410,7 @@
             location.reload()
         },500);
     }
-    
+    // === Edit 功能===
 
 </script>
 {% endblock %}
