--- a/YOLOTalk-GUI/templates/schedule.html
+++ b/YOLOTalk-GUI/templates/schedule.html
@@ -248,7 +248,7 @@
                 "start_time":start_time,
                 "end_time":end_time
             });
-            alert(title.split(" ")[3]+title.split(" ")[4]+title.split(" ")[1])
+            alert(title.split(" ")[3] + title.split(" ")[4] +"\n" +title.split(" "))
             setTimeout(function(){ location.reload() }, 500);
     };
     
